--- a/docker/Dockerfile.bf2raw
+++ b/docker/Dockerfile.bf2raw
@@ -1,6 +1,6 @@
 FROM continuumio/miniconda3:latest
 
-ENV version="0.5.0"
+ENV version="0.9.1"
 ENV version_suffix=""
 
 RUN apt-get update && \
@@ -8,4 +8,4 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN conda install -c ome raw2ometiff==${version}${version_suffix} -y 
+RUN conda install -c ome bioformats2raw==${version}${version_suffix} -y 
